cluster/k8s/activitywatch/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activitywatch-readonly
  namespace: activitywatch
spec:
  selector:
    app: activitywatch
  ports:
    - port: 5600
      targetPort: 5601
      name: http
